# my_twitter

./: db.sqlite3  pyproject.toml
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
my_twitter/: asgi.py  settings.py  urls.py  wsgi.py
my_twitter/.github/workflows/: deploy.yml  workflow-pr.yml
tweets/: models.py  urls.py  views.py
tweets/migrations/: 0001_initial.py  0002_initial.py
tweets/templates/registration/: login.html
tweets/templates/tweets/: base.html  create_tweet.html  tweet_list.html
users/: models.py  views.py
users/migrations/: 0001_initial.py
