[tool.poetry]
name = "my-twitter"
version = "0.1.0"
description = ""
authors = ["Seu nome aqui <alexandreaugustosan93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
djangorestframework = "^3.15.2"
django-allauth = "^64.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
